--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
-<p>Hello 大家好</p>
-<p>我是霸都丶傲天，这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<div class="demo form-bg">
+        <div class="container">
 
-<ul>
-  <li> <a href="https://www.zhihu.com/people/AJLoveChina">知乎</a> </li>
-  <li> <a href="http://hejie.nigeerhuo.com">我的博客(已经不更细了,现在在知乎写文章)</a> </li>
-</ul>
+            <div class="row">
+                <div class="col-md-offset-4 col-md-4 col-sm-offset-3 col-sm-6">
+                    <form class="form-horizontal">
+                        <div class="heading">注册页面</div>
+                        <div class="form-group">
+                            <i class="fa fa-user"></i><input required name="login[username]" type="email" class="form-control" placeholder="Username" id="exampleInputEmail1">
+                        </div>
+                        <div class="form-group">
+                            <i class="fa fa-lock"></i><input required name="login[password]" type="password" class="form-control" placeholder="Password" />
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-default"><i class="fa fa-arrow-right"></i></button>
+                            <span><a href="" class="create_account">注册</a></span>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+
