--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h2>这是主要内容区</h2>  
         <p>你可以在这里添加你的内容。</p>  
         <!-- 添加登录按钮 -->  
-        <a href="wer.html" class="login-button">登录</a>  
+        <a href="tt.html" class="login-button">登录</a>
     </main>  
     <footer>  
         <p>版权所有 &copy; 2023</p>  
