--- a/wer.html
+++ b/wer.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<!-- https://codepen.io/danielkvist/pen/LYNVyPL -->
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <style>
+<!DOCTYPE html>  
+<html lang="zh">  
+<head>  
+  <meta charset="UTF-8">  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <title>Document</title>  
+  <style>  
     :root {
       /* COLORS */
       --white: #e9e9e9;
@@ -38,6 +37,13 @@
       display: grid;
       height: 100vh;
       place-items: center;
+    }
+
+    header {
+        background-color: #1000;
+        color: black;
+        padding: 10px;
+        text-align: center;
     }
 
     .form__title {
@@ -221,65 +227,92 @@
         z-index: 5;
       }
     }
-  </style>
-</head>
-
+  
+    /* 添加返回按钮的样式 */  
+    .back-button {  
+      display: block;  
+      margin-top: 2rem; /* 根据需要调整位置 */  
+      text-align: center;  
+      text-decoration: none;  
+      color: inherit;  
+      font-size: 1rem;  
+      background-color: var(--blue);  
+      border: none;  
+      padding: 0.5rem 1rem;  
+      border-radius: 5px;  
+      cursor: pointer;  
+    }  
+  </style>  
+</head>  
+  
 <body>
-  <div class="container right-panel-active">
-    <!-- Sign Up -->
-    <div class="container__form container--signup">
-      <form action="#" class="form" id="form1">
-        <h2 class="form__title">注册</h2>
-        <input type="text" placeholder="用户名" class="input" />
-        <input type="email" placeholder="邮箱" class="input" />
-        <input type="password" placeholder="密码" class="input" />
-        <button class="btn">注 册</button>
-      </form>
-    </div>
-
-    <!-- Sign In -->
-    <div class="container__form container--signin">
-      <form action="#" class="form" id="form2">
-        <h2 class="form__title">登录</h2>
-        <input type="email" placeholder="邮箱" class="input" />
-        <input type="password" placeholder="密码" class="input" />
-        <a href="#" class="link">忘记密码？</a>
+<header>
+        <h1>***登录界面***</h1>
+        <script>
+              // 添加返回按钮并设置其点击事件
+    const backButton = document.createElement('a'); // 创建<a>元素
+    backButton.href = 'index.html'; // 设置链接为index.html
+    backButton.textContent = '返回首页'; // 设置按钮文本
+    backButton.className = 'back-button'; // 应用样式类
+    document.body.insertBefore(backButton, document.body.firstChild); // 将按钮插入到<body>的开头
+          </script>
+</header>
+  <div class="container right-panel-active">  
+    <!-- Sign Up -->  
+    <div class="container__form container--signup">  
+      <form action="#" class="form" id="form1">  
+        <h2 class="form__title">注册</h2>  
+        <input type="text" placeholder="用户名" class="input" />  
+        <input type="email" placeholder="邮箱" class="input" />  
+        <input type="password" placeholder="密码" class="input" />  
+        <button class="btn">注 册</button>  
+      </form>  
+    </div>  
+  
+    <!-- Sign In -->  
+    <div class="container__form container--signin">  
+      <form action="#" class="form" id="form2">  
+        <h2 class="form__title">登录</h2>  
+        <input type="email" placeholder="邮箱" class="input" />  
+        <input type="password" placeholder="密码" class="input" />  
+        <a href="#" class="link">忘记密码？</a>  
         <button class="btn">登 录</button>
-      </form>
-    </div>
-
-    <!-- Overlay -->
-    <div class="container__overlay">
-      <div class="overlay">
-        <div class="overlay__panel overlay--left">
-          <button class="btn" id="signIn">←登 录</button>
-        </div>
-        <div class="overlay__panel overlay--right">
+      </form>  
+    </div>  
+  
+    <!-- Overlay -->  
+    <div class="container__overlay">  
+      <div class="overlay">  
+        <div class="overlay__panel overlay--left">  
+          <button class="btn" id="signIn">←登 录</button>  
+        </div>  
+        <div class="overlay__panel overlay--right">  
           <button class="btn" id="signUp">注 册→</button>
-        </div>
-      </div>
-    </div>
-  </div>
+        </div>  
+      </div>  
+    </div>  
+  </div>  
+  
+  <script>  
+    const signInBtn = document.getElementById("signIn");  
+    const signUpBtn = document.getElementById("signUp");  
+    const fistForm = document.getElementById("form1");  
+    const secondForm = document.getElementById("form2");  
+    const container = document.querySelector(".container");  
+  
+    signInBtn.addEventListener("click", () => {  
+      container.classList.remove("right-panel-active");  
+    });  
+  
+    signUpBtn.addEventListener("click", () => {  
+      container.classList.add("right-panel-active");  
+    });  
+  
+    fistForm.addEventListener("submit", (e) => e.preventDefault());  
+    secondForm.addEventListener("submit", (e) => e.preventDefault());  
+  
 
-  <script>
-    const signInBtn = document.getElementById("signIn");
-    const signUpBtn = document.getElementById("signUp");
-    const fistForm = document.getElementById("form1");
-    const secondForm = document.getElementById("form2");
-    const container = document.querySelector(".container");
-
-    signInBtn.addEventListener("click", () => {
-      container.classList.remove("right-panel-active");
-    });
-
-    signUpBtn.addEventListener("click", () => {
-      container.classList.add("right-panel-active");
-    });
-
-    fistForm.addEventListener("submit", (e) => e.preventDefault());
-    secondForm.addEventListener("submit", (e) => e.preventDefault());
-
-  </script>
-</body>
-
+  </script>  
+</body>  
+  
 </html>
