--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>  
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>我的简易网站</title>  
+    <title>xmcl工作室官方网站</title>
     <style>  
         body {  
             font-family: Arial, sans-serif;  
@@ -51,21 +51,65 @@
             background-color: #45a049; /* 鼠标悬停时颜色稍变 */  
             color: white;  
             text-decoration: none;  
-        }  
+        }
+                /* 登录按钮样式 */
+        .in-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #4CAF50; /* 绿色背景 */
+            color: white; /* 白色文本 */
+            border: none; /* 无边框 */
+            border-radius: 4px; /* 圆角 */
+            cursor: pointer; /* 鼠标悬停时变为手型 */
+            text-align: center;
+            text-decoration: none;
+            font-size: 16px;
+            margin: 4px 2px;
+            transition-duration: 0.4s; /* 动画效果时长 */
+        }
+
+        .in-button:hover {
+            background-color: #45a049; /* 鼠标悬停时颜色稍变 */
+            color: white;
+            text-decoration: none;
+        }
+
+        .Operator-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #FF0000; /* 红色背景 */
+            color: yellow; /* 黄色文本 */
+            border: none; /* 无边框 */
+            border-radius: 4px; /* 圆角 */
+            cursor: pointer; /* 鼠标悬停时变为手型 */
+            text-align: center;
+            text-decoration: none;
+            font-size: 16px;
+            margin: 4px 2px;
+            transition-duration: 0.4s; /* 动画效果时长 */
+        }
+
+        .Operator-button:hover {
+            background-color: #FF6347; /* 鼠标悬停时颜色稍变 */
+            color: white;
+            text-decoration: none;
+        }
     </style>  
 </head>  
 <body>  
     <header>  
-        <h1>欢迎来到我的网站</h1>  
+        <h1>xmcl工作室官方网站</h1>
     </header>  
     <main>  
-        <h2>这是主要内容区</h2>  
-        <p>你可以在这里添加你的内容。</p>  
+        <h2>您还没有登录</h2>
+        <p>请先登录！</p>
         <!-- 添加登录按钮 -->  
-        <a href="tt.html" class="login-button">登录</a>
+        <a href="tt.html" class="login-button">登录、注册</a>
+        <a href="tt.html" class="in-button">继续浏览访客内容</a>
+        <a href="tt.html" class="Operator-button">我是管理员</a>
     </main>  
     <footer>  
-        <p>版权所有 &copy; 2023</p>  
+        <p>xmcl版权所有 &copy; 2023</p>
     </footer>  
 </body>  
 </html>
