--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
 
         .Operator-button {
             display: inline-block;
-            padding: 10px 20px;
+            padding: 5px 5px;
             background-color: #FF0000; /* 红色背景 */
             color: yellow; /* 黄色文本 */
             border: none; /* 无边框 */
-            border-radius: 4px; /* 圆角 */
-            cursor: pointer; /* 鼠标悬停时变为手型 */
+            border-radius: 5px; /* 圆角 */
+            cursor: wait; /* 鼠标悬停时变为手型 */
             text-align: center;
             text-decoration: none;
-            font-size: 16px;
-            margin: 4px 2px;
-            transition-duration: 0.4s; /* 动画效果时长 */
+            font-size: 5px;
+            margin: 2px 2px;
+            transition-duration: 0.9s; /* 动画效果时长 */
         }
 
         .Operator-button:hover {
@@ -98,18 +98,20 @@
 </head>  
 <body>  
     <header>  
-        <h1>xmcl工作室官方网站</h1>
+        <h1>请您登录</h1>
     </header>  
     <main>  
         <h2>您还没有登录</h2>
         <p>请先登录！</p>
         <!-- 添加登录按钮 -->  
         <a href="tt.html" class="login-button">登录、注册</a>
-        <a href="tt.html" class="in-button">继续浏览访客内容</a>
-        <a href="tt.html" class="Operator-button">我是管理员</a>
+        <a href="index2.0.html" class="in-button">继续浏览访客内容</a>
+
     </main>  
     <footer>  
-        <p>xmcl版权所有 &copy; 2023</p>
+        <a href="wer.html">用户须知</a>
+        <p>xmcl版权所有 &copy; 2024</p>
+        <a href="ttop.html" class="Operator-button">我是管理员</a>
     </footer>  
 </body>  
 </html>
