--- a/tttoindex.html
+++ b/tttoindex.html
@@ -16,8 +16,8 @@
   }
 
   .loader {
-    border: 16px solid #ffff00; /* Light grey */
-    border-top: 16px solid #FF5210; /* Blue */
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
     border-radius: 50%;
     width: 120px;
     height: 120px;
@@ -40,7 +40,7 @@
   setTimeout(function() {
     document.querySelector('.loader').style.display = 'none';
     // 这里可以添加内容或者执行其他操作
-    window.location.href = 'werop.html';
+    window.location.href = 'index.html';
   }, 3000); // 延迟2秒（2000毫秒）后移除加载器
 
 </script>
