--- a/tttoindex.html
+++ b/tttoindex.html
@@ -40,7 +40,7 @@
   setTimeout(function() {
     document.querySelector('.loader').style.display = 'none';
     // 这里可以添加内容或者执行其他操作
-    window.location.href = 'index.html';
+    window.location.href = 'indexuup.html';
   }, 3000); // 延迟2秒（2000毫秒）后移除加载器
 
 </script>
