--- a/sand.html
+++ b/sand.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebSocket Chat</title>
+    <title>输入：PS+空格+密码来修改你的密码，输入op来解锁</title>
 </head>
 <body>
     <h1>WebSocket Chat</h1>
