--- a/sand.html
+++ b/sand.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>输入：PS+空格+密码来修改你的密码，输入op来解锁</title>
+    <title>棘御管理</title>
 </head>
 <body>
     <h1>WebSocket Chat</h1>
-    <input type="text" id="messageInput" placeholder="Enter message">
-    <button onclick="sendMessage()">Send</button>
+    <input type="text" id="messageInput" placeholder="输入：PS+空格+密码来修改你的密码，输入op来解锁">
+    <button onclick="sendMessage()">发送</button>
     <ul id="messageList"></ul>
 
     <script>
