--- a/sand.html
+++ b/sand.html
@@ -6,7 +6,7 @@
     <title>棘御管理</title>
 </head>
 <body>
-    <h1>WebSocket Chat</h1>
+    <h1>输入：PS+空格+密码来修改你的密码，输入op来解锁</h1>
     <input type="text" id="messageInput" placeholder="输入：PS+空格+密码来修改你的密码，输入op来解锁">
     <button onclick="sendMessage()">发送</button>
     <ul id="messageList"></ul>
